# ros_cv_pkg

./: .gitignore  .travis.rosinstall  .travis.yml  README.md
bounding_box_estimation/: CMakeLists.txt  package.xml
bounding_box_estimation/launch/: bounding_box_estimation.launch
bounding_box_estimation/src/: #bounding_box_estimation_node.cpp#  .#bounding_box_estimation_node.cpp  bounding_box_estimation_node.cpp  moment_of_inertia_estimation.cpp
cluster_point_indices_image/: CMakeLists.txt  package.xml
cluster_point_indices_image/launch/: cluster_point_indices_image.launch
cluster_point_indices_image/src/: cluster_point_indices_image_node.cpp
collision_check_grasp_plannar/: CMakeLists.txt  package.xml
collision_check_grasp_plannar/cfg/: CollisionCheckGraspPlannar.cfg
collision_check_grasp_plannar/launch/: collision_check_grasp_plannar.launch
collision_check_grasp_plannar/src/: #collision_check_grasp_plannar_node.cpp#  .#collision_check_grasp_plannar_node.cpp  collision_check_grasp_plannar_node.cpp
convex_connected_voxels/: CMakeLists.txt  package.xml
convex_connected_voxels/cfg/: SupervoxelSegmentation.cfg
convex_connected_voxels/euslisp/: grasp-object.l
convex_connected_voxels/launch/: convex_connected_voxels.launch  organized_multi_plane_segmentation.launch
convex_connected_voxels/src/: convex_connected_voxels_node.cpp  supervoxel_segmentation.cpp
cuboid_bilateral_symmetric_segmentation/: .#CMakeLists.txt  CMakeLists.txt  package.xml
cuboid_bilateral_symmetric_segmentation/cfg/: SupervoxelSegmentation.cfg
cuboid_bilateral_symmetric_segmentation/launch/: cuboid_bilateral_symmetric_segmentation.launch
cuboid_bilateral_symmetric_segmentation/src/: .#cuboid_bilateral_symmetric_segmentation_node.cpp  cuboid_bilateral_symmetric_segmentation_node.cpp  moment_of_inertia_estimation.cpp  object_region_handler.cpp  oriented_bounding_box.cpp  supervoxel_segmentation.cpp
depth_map_icp/: CMakeLists.txt  package.xml
depth_map_icp/launch/: depth_map_icp.launch
depth_map_icp/src/: ICPOdometry.cpp  depth_map_icp_node.cpp
dynamic_state_segmentation/: CMakeLists.txt  package.xml
dynamic_state_segmentation/launch/: dynamic_state_segmentation.launch
dynamic_state_segmentation/scripts/: feature3d_clustering.py
dynamic_state_segmentation/src/: dynamic_state_segmentation_node.cpp  graph.cpp  graphcuts_optimization.cpp
dynamic_state_segmentation/srv/: Feature3DClustering.srv
evaluation_ground_truth_annotator/: CMakeLists.txt  package.xml
evaluation_ground_truth_annotator/launch/: annotate_symmetric_plane.launch  evaluation_ground_truth_annotator.launch
evaluation_ground_truth_annotator/scripts/: merge_multiple_textfiles.py
evaluation_ground_truth_annotator/src/: annotate_symmetric_plane.cpp  evaluate_point_cloud_accuracy.cpp  evaluation_ground_truth_annotator_node.cpp
handheld_object_registration/: CMakeLists.txt  package.xml
handheld_object_registration/launch/: handheld_object_registration.launch
handheld_object_registration/scripts/: particle_filter_update_manager.py
handheld_object_registration/src/: .#handheld_object_registration_node.cpp  handheld_object_registration_node.cpp  mean_shift_clustering.cpp  (+5 more)
hierarchical_object_learning/: CMakeLists.txt  package.xml
image_annotation_tool/: CMakeLists.txt  Makefile  package.xml
image_optical_flow/: CMakeLists.txt  package.xml
incremental_icp_registeration/: CMakeLists.txt  package.xml
interactive_segmentation/: CMakeLists.txt  package.xml
kernelized_correlation_filters/: CMakeLists.txt  package.xml
multilayer_object_tracking/: CMakeLists.txt  package.xml
object_recognition/: CMakeLists.txt  Makefile  package.xml
optitrack_xtion_sync/: CMakeLists.txt  package.xml
particle_filter_tracking/: CMakeLists.txt  package.xml
pcl_filter_utils/: CMakeLists.txt  Makefile  package.xml
point_cloud_cluster_matching/: CMakeLists.txt  package.xml
point_cloud_edge/: CMakeLists.txt  package.xml
point_cloud_image_creator/: CMakeLists.txt  package.xml
point_cloud_mincut_maxflow/: CMakeLists.txt  package.xml
point_cloud_normal_gradient/: CMakeLists.txt  package.xml  point_cloud_normal_gradient.launch
point_cloud_scene_decomposer/: CMakeLists.txt  Makefile  package.xml
point_cloud_scene_decomposer/cfg/: PointCloudFilterUtils.cfg
point_cloud_scene_decomposer/euslisp/: generate-tabletop-scene.l  main.l
point_cloud_scene_decomposer/include/point_cloud_scene_decomposer/: #point_cloud_scene_decomposer.h#  .#point_cloud_scene_decomposer.h  connected.h  constants.h  contour_thinning.h  pcl_filter_utils.h  point_cloud_cluster_matching.h  point_cloud_image_creator.h  point_cloud_normal_gradient.h  point_cloud_scene_decomposer.h  region_adjacency_graph.h  scene_decomposer_image_processor.h
point_cloud_scene_decomposer/launch/: #cluster_point_indices_decomposer.launch#  #point_cloud_scene_decomposer.launch#  .#cluster_point_indices_decomposer.launch  cluster_point_indices_decomposer.launch  organized_multi_plane_segmentation.launch  pcl_filter_utils.launch  point_cloud_cluster_matching.launch  point_cloud_image_creator.launch  point_cloud_normal_gradient.launch  point_cloud_scene_decomposer.launch  scene_decomposer_view.launch
point_cloud_scene_decomposer/msg/: signal.msg
point_cloud_scene_decomposer/scripts/: cluster_voxels.py
point_cloud_scene_decomposer/src/: #point_cloud_cluster_matching_node.cpp#  #point_cloud_scene_decomposer_node.cpp#  #region_adjacency_graph.cpp#  .#point_cloud_cluster_matching_node.cpp  .#point_cloud_scene_decomposer_node.cpp  pcl_filter_utils_node.cpp  point_cloud_cluster_matching_node.cpp  point_cloud_image_creator_node.cpp  point_cloud_normal_gradient_node.cpp  point_cloud_scene_decomposer_node.cpp  region_adjacency_graph.cpp  scene_decomposer_image_processor.cpp
point_cloud_scene_decomposer/srv/: ClusterVoxels.srv
ros_cmt_tracker/: CMakeLists.txt  package.xml
ros_cv_pkg/: CMakeLists.txt  package.xml
saliency_map_generator/: CMakeLists.txt  package.xml
temp_robot_node/: CMakeLists.txt  package.xml
test_icp/: CMakeLists.txt  package.xml
(+318 files in other folders)
