<package>
  <name>ros_cv_pkg</name>
  <version>0.0.0</version>
  <description>Krishneel research ros packages</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="krishneel@todo.todo">krishneel</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/temp_robot_node</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
 <buildtool_depend>catkin</buildtool_depend>

  <run_depend>bounding_box_estimation</run_depend>
  <run_depend>cluster_point_indices_image</run_depend>
  <run_depend>hierarchical_object_learning</run_depend>
  <run_depend>image_annotation_tool</run_depend>
  <run_depend>image_optical_flow</run_depend>
  <run_depend>interactive_segmentation</run_depend>
  <run_depend>multilayer_object_tracking</run_depend>
  <run_depend>object_recognition</run_depend>
  <run_depend>optitrack_xtion_sync</run_depend>
  <run_depend>particle_filter_tracking</run_depend>
  <run_depend>pcl_filter_utils</run_depend>
  <run_depend>point_cloud_cluster_matching</run_depend>
  <run_depend>point_cloud_edge</run_depend>
  <run_depend>point_cloud_image_creator</run_depend>
  <run_depend>point_cloud_normal_gradient</run_depend>
  <run_depend>point_cloud_scene_decomposer</run_depend>
  <run_depend>saliency_map_generator</run_depend>
  <run_depend>temp_robot_node</run_depend>
  <run_depend>point_cloud_mincut_maxflow</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>

</package>
